--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,7 @@
 <body cz-shortcut-listen="true">
 <header>
     <div class="wrap">
-        <a href="{{ path('AModifier') }}">
+        <a href="{{ path('app_homepage') }}">
             <img class="logo" src="{{ asset('assets/deco/logo.png') }}" alt="La Sirene, Espace musiques actuelles">
         </a>
         {{ render(controller('App\\Controller\\DefaultController::formNewsletter')) }}
