--- a/templates/default/_formNewsletter.html.twig
+++ b/templates/default/_formNewsletter.html.twig
@@ -1,6 +1,8 @@
-{% set form = formObject.createView %}
-{{ form_start(form, {'action': path('newsletter'),'method': 'POST'}) }}
+{% set form = formObject %}
+{% block body %}
+{{ form_start(form, {'action': path('app_newsletter'),'method': 'POST'})  }}
 {{ form_label(form.email) }}
 {{ form_widget(form.email) }}
 <input type="submit" value="ok">
 {{ form_end(form) }}
+{% endblock %}
