--- a/templates/default/concerts.html.twig
+++ b/templates/default/concerts.html.twig
@@ -4,12 +4,12 @@
     <main class="wrap">
         <header><h2>Prochains concerts</h2></header>
         <ul class="listeEvenements">
-            {% for concert in concerts %}
+            {% for concertUnic in concert %}
             <li class="evenement">
-                <h3 class="date">{{ concert.dateConcert | format_date('full', locale='fr') }}</h3>
-                <a href="{{ path('concert',{'id': concert.id }) }}">
-                    <img src="{{ asset('assets/imgGroupes/'~concert.artiste.image) }}" alt="{{ concert.artiste.nom }}">
-                    <h4>{{ concert.artiste.prenom }} {{ concert.artiste.nom }}</h4>
+                <h3 class="date">{{ concertUnic.dateConcert | format_date('full', locale='fr') }}</h3>
+                <a href="{{ path('app_concert',{'id': concertUnic.id }) }}">
+                    <img src="{{ asset('assets/imgGroupes/'~concertUnic.artiste.photo) }}" alt="{{ concertUnic.artiste.nom }}">
+                    <h4>{{ concertUnic.artiste.prenom }} {{ concertUnic.artiste.nom }}</h4>
                 </a>
             </li>
             {% endfor %}
